--- a/TodoMvu/wwwroot/index.html
+++ b/TodoMvu/wwwroot/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <base href="/">
+    <base href="/" />
 </head>
 <body class="learn-bar">
 
